# ncursese_game_c

./: CMakeLists.txt  client.c  main.c  test.c
